--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,21 +5,59 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     tools:context=".SearchActivity">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/search_bar_cons"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.05"
+        app:layout_constraintTop_toTopOf="parent">
+    <ImageView
+        android:id="@+id/arrow_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_back_24dp"
+        android:padding="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:singleLine="true"
+        android:layout_marginHorizontal="10dp"
+        android:background="@null"
+        android:inputType="text"
+        android:imeOptions="actionSearch"
+        app:layout_constraintStart_toEndOf="@id/arrow_back"
+        app:layout_constraintEnd_toStartOf="@id/clear_text"
+        app:layout_constraintTop_toTopOf="@id/arrow_back"
+        app:layout_constraintBottom_toBottomOf="@id/arrow_back"/>
+    <ImageView
+        android:id="@+id/clear_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_arrow_back_24dp"
-        android:drawableEnd="@drawable/ic_close_24px"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:src="@drawable/ic_close_24px"
+        android:padding="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/arrow_back"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        app:layout_constraintTop_toBottomOf="@id/search_bar_cons"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         tools:listitem="@layout/search_history_item"
-        app:layout_constraintTop_toBottomOf="@id/editText"
+        app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
